# ConstraintGridApp

./: README.md  docker-compose.yml
alpine-artemis/: Dockerfile  broker.xml
constraint-grid/: Dockerfile
constraint-grid/constraint-grid-app/: angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
constraint-grid/constraint-grid-app/src/: index.html  styles.css
constraint-grid/constraint-grid-app/src/app/: app.component.css  app.component.spec.ts  app.component.ts  app.module.ts
constraint-grid/constraint-grid-app/src/app/constraint-grid/: constraint-grid.component.css  constraint-grid.component.html  constraint-grid.component.spec.ts  constraint-grid.component.ts
constraint-grid/constraint-grid-app/src/app/constraint-select/: constraint-select.component.html  constraint-select.component.spec.ts  constraint-select.component.ts
constraint-grid/constraint-grid-app/src/app/grid-tools/: grid-tools.component.html  grid-tools.component.ts
constraint-grid/constraint-grid-app/src/app/group-list/: group-list.component.css  group-list.component.html  group-list.component.ts
constraint-grid/constraint-grid-app/src/app/menu/: menu.component.css  menu.component.html  menu.component.ts
constraint-grid/constraint-grid-app/src/app/services/: config.service.ts  shared-data-event.service.spec.ts  shared-data-event.service.ts  shared-grid.service.spec.ts  shared-grid.service.ts  solution.service.ts
constraint-grid/constraint-grid-app/src/app/solutions/: solutions.component.css  (+2 more)
constraint-grid/constraint-grid-app/src/assets/: config.json
minizinc-mq/: Dockerfile
minizinc-mq/MinizincMQ/: CMakeLists.txt
minizinc-mq/MinizincMQ/src/: ProtonClient.cpp  ProtonClient.h  main.cpp
spring-backend/: Dockerfile
spring-backend/MinizincBackend/: .project  nbactions.xml  pom.xml
(+34 files in other folders)
